--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/_CreateOrUpdate.cshtml
@@ -236,7 +236,7 @@
                            @Html.TextAreaFor(x => x.SeName)
 							@if (Model.Id != 0)
                             {
-                                Html.RenderAction("NamesPerEntity", "UrlRecord", new { entityName = "Manufacturer", entityId = @Model.Id });
+                                @Html.Action("NamesPerEntity", "UrlRecord", new { entityName = "Manufacturer", entityId = @Model.Id })
                             }
                            @Html.ValidationMessageFor(model => model.SeName)
                        </td>
