--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminLayout.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminLayout.cshtml
@@ -29,7 +29,7 @@
             else
             {
 				@Html.Widget("admin_navbar_before")
-				@{ Html.RenderAction("Navbar", "Common", new { area = "Admin" }); }
+			    Html.RenderAction("Navbar", "Common", new { area = "Admin" });
 				@Html.Widget("admin_navbar_after")
             }
 
