--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -497,7 +497,7 @@
 
 		if (Model.IsEditable)
 		{
-			@Html.Action("CrossSellProducts", "Product")
+			Html.RenderAction("CrossSellProducts", "Product");
 		}
 	}
 	else
