--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_artlist.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_artlist.scss
@@ -9,14 +9,15 @@ $art-font-size-sm:              $font-size-xs;
 $art-line-height:               1.3;
 $art-price-color:               $body-color;
 $art-price-offer-color:         $brand-danger;
-$art-bg-color:                  #fff;
 $art-border-color:              rgba(0,0,0, 0.12);
+$art-active-bg-color:           #fff;
 
 .artlist {
     position: relative;
     @include make-row();
     font-size: $art-font-size;
     line-height: $art-line-height; 
+    z-index: 3;
 
     border-collapse: collapse;
 }
@@ -33,17 +34,19 @@ $art-border-color:              rgba(0,0,0, 0.12);
     
     border: 1px solid transparent;
     border-bottom-color: $art-border-color;
-    background: $art-bg-color;   
+    background: transparent;   
 
     margin-top: -1px;
     margin-left: -1px;
 
     border-collapse: collapse;
-}
+    //z-index: 1;
 
-.art:hover {
-    border-color: rgba(0,0,0, 0.2);
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    &.active {
+        background: $art-active-bg-color;
+        border-color: rgba(0,0,0, 0.2);
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    }
 }
 
 .artlist-style-grid {
@@ -142,6 +145,15 @@ $art-border-color:              rgba(0,0,0, 0.12);
     margin-bottom: 0.25rem;
 }
 
+.art-brand {
+    font-size: $art-font-size-sm;
+    color: $text-muted;
+    text-transform: uppercase;
+    box-sizing: content-box;
+    min-height: $art-font-size-sm * $art-line-height;
+    @include text-truncate();
+}
+
 .art-name {
     box-sizing: content-box;
     font-size: $art-font-size;
@@ -205,49 +217,78 @@ $art-border-color:              rgba(0,0,0, 0.12);
     @include text-truncate();
 }
 
-.art-buttons-block {
-    display: none;
+.art-drop {
     position: absolute;
     left: -1px;
     right: -1px;
-    height: 50px;
-    bottom: -49px;
-    background: $art-bg-color;
+    bottom: 0;
+    background: $art-active-bg-color;
     border: 1px solid rgba(0,0,0, 0.2);
     border-top-color: #fff;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
-    z-index: $zindex-popover;  
+    opacity: 0;
+    visibility: hidden;
+    z-index: -1;  
 
-    .row {
+    .art-drop-btn-group {
         margin: 0;
     }
 
-    .col-xs {
-        /*padding-left: $grid-gutter-width / 2;
-        padding-right: $grid-gutter-width / 2;*/
-        text-align: center;
-        vertical-align: middle;
-        color: #666;
-        flex-basis: 0;
-        flex-grow: 1;
-        max-width: 100%;
-        height: 50px;
-        cursor: pointer;
+    .art-drop-btn {
         display: block;
+        border-radius: 0;
+        border: none;
+        box-shadow: none;
+        transition: none;
+        height: 2.75rem;
+        line-height: 2.75rem;
 
-        .fa {
-            font-size: 1.25rem;
-            padding-top: 14px;
-        }
-
-        &:hover {
-            background: rgba(0,0,0, 0.07);
+        &.btn-secondary {
+            color: #666;
         }
     }
 
-    .art:hover & {
-        display: block;
+    .art.active & { 
+        opacity: 1;
+        visibility: visible;
+        z-index: $zindex-popover - 1;
     }
+}
+
+.art-drop-info {
+    padding-left: $grid-gutter-width / 2;
+    padding-right: $grid-gutter-width / 2;
+    margin-bottom: 0.75rem;
+}
+
+.art-color-opts {
+    position: relative;
+    @include clearfix();
+}
+
+.art-color-opt {
+    float: left;
+    display: block;
+    width: 1rem;
+    height: 1rem;
+    margin-right: 2px;
+    margin-bottom: 2px;
+    text-decoration: none;
+
+    &:hover {
+        outline: 1px solid rgba(0,0,0, 0.3);
+    }
+}
+
+.art-more-opts {
+    font-size: $art-font-size-sm;
+    color: $text-muted;
+    
+    > a { font-weight: bold; }  
+}
+
+.art-drop-info > * + * {
+    margin-top: 0.4rem;
 }
 
 
