--- a/src/Presentation/SmartStore.Web/Administration/Views/News/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/News/_CreateOrUpdate.cshtml
@@ -130,7 +130,7 @@
                 @Html.EditorFor(model => model.SeName)
 				@if (Model.Id != 0)
                 {
-                    Html.RenderAction("NamesPerEntity", "UrlRecord", new { entityName = "NewsItem", entityId = @Model.Id });
+                    @Html.Action("NamesPerEntity", "UrlRecord", new { entityName = "NewsItem", entityId = @Model.Id })
                 }
                 @Html.ValidationMessageFor(model => model.SeName)
             </td>
