--- a/src/Presentation/SmartStore.Web/Views/Search/InstantSearch.TopProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/InstantSearch.TopProducts.cshtml
@@ -4,7 +4,7 @@
 
 
 <ul class="instasearch-hits">
-	@foreach (var hit in Model.TopProducts)
+	@foreach (var hit in Model.TopProducts.Items)
 	{
 		<li>
 			<a class="instasearch-hit" href="@Url.RouteUrl("Product", new { SeName = hit.SeName })">
