--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -144,7 +144,55 @@ body {
 
 
 
+//
+// Text expander / collapser
+// ------------------------------------------------------
 
+.more-less {
+    display: block;
+    position: relative;
+    max-height: 260px;
+    overflow: hidden;
+    margin-bottom: 1.5rem;
+
+    .btn-text-expander {
+        display: none;
+        position: absolute;
+        font-weight: 600;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 2;
+        text-decoration: none !important;
+
+        .fa { padding-right: 0.4rem }
+    }
+
+    .btn-text-expander--expand::after {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: ($font-size-base * $line-height) * 3;
+        background: linear-gradient(to bottom, rgba($body-bg, 0), $body-bg 70%, $body-bg 100%);
+    }
+
+    .btn-text-expander--collapse {
+        position: relative;
+        font-weight: normal;
+    }
+
+    &.collapsed {
+        .btn-text-expander--expand { display: block; }
+    }
+
+    &.expanded {
+        max-height: none !important;
+        .btn-text-expander--collapse { display: block; }
+    }
+}
 
 
 
