Theming: refactored ManufacturerModel & ProductByTagModel

--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductsByTag.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductsByTag.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ProductsByTagModel
-@using SmartStore.Core;
+
 @using SmartStore.Core.Infrastructure;
 @using SmartStore.Web.Models.Catalog;
 @using SmartStore.Web;
 @using SmartStore.Web.Models.Catalog;
-@using SmartStore.Web;
+
 @using SmartStore.Web.Framework.UI;
 @using SmartStore.Core.Domain.Seo;
 
@@ -24,58 +24,20 @@
 	}
 }
 
-@functions{
-    private bool ShowListOptions() {
-        return Model.Products.Count > 0 &&
-               (Model.PagingFilteringContext.AllowProductViewModeChanging ||
-               Model.PagingFilteringContext.AllowProductSorting ||
-               Model.PagingFilteringContext.AllowCustomersToSelectPageSize);
-    }
-}
-
 <div class="page product-tag-page">
     <div class="page-title">
-        <h1>@String.Format(T("Products.Tags.ProductsTaggedWith").Text, Model.TagName)</h1>
+        <h1 class="h3">@T("Products.Tags.ProductsTaggedWith", "<small class='search-term'>" + Model.TagName + "</small>")</h1>	
     </div>
+
     <div class="page-body">
         @Html.Widget("productsbytag_top")
 
-        @if (ShowListOptions())
-        {
-            Html.RenderPartial("_ProductListOptions", Model.PagingFilteringContext);
-        }
-
-        @Html.Widget("productsbytag_before_product_list")
-
-        @if (Model.Products.Count > 0)
-        {
-            if (Model.PagingFilteringContext.ViewMode == "list")
-            {
-                @*list mode*@
-                <div class="product-list">
-                    @foreach (var product in Model.Products)
-                    {
-                        <article class="item-box details card p-a-1">
-                            @Html.Partial("_ProductBoxList", product)
-                        </article>
-                    }
-                </div>
-            }
-            else
-            {
-                @*grid mode*@
-                <div class="card-deck card-cols-sm-1 card-cols-md-2 card-cols-lg-3 product-grid">
-                    @foreach (var product in Model.Products)
-                    {
-                        <article class="card card-block card-shadow text-xs-center">
-                            @{ Html.RenderPartial("_ProductBox", product); }
-                        </article>
-                    }
-                </div>
-            }
-        }
-
-        @Html.SmartStore().Pager(Model.PagingFilteringContext).Name("pagination-bottom").QueryParam("pagenumber")
+		<div class="product-list-container">
+			@if (Model.Products != null && Model.Products.Items.Count > 0)
+			{
+				Html.RenderPartial("Product.List", Model.Products);
+			}
+		</div>
 
         @Html.Widget("productsbytag_bottom")
     </div>
